2013-07-18  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in:  Allow for the case that pkg-config is needed in order
	to find libcerf (which Mojca Miklavec reports is the case on OSX).

	* term/svg.trm:  The svg terminal should not rely on 'set fontpath',
	which was written and documented to apply only to the postscript
	terminal.

2013-07-15  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/makefile.all src/makefile.awc:  Recreate to include libcerf.

	* demo/cerf.dem:  UTF8 encoding

	* docs/gnuplot.doc:  HTML table for libcerf functions.

	* config/mingw/Makefile:  Build option to use libcerf.

2013-07-14  Ethan A Merritt  <merritt@u.washington.edu>

	* src/show.c (show_version):  Report +LIBCERF in 'show version long'.

	* demo/cerf.dem:  Exercise functions imported from libcerf, if present.

2013-07-12  Ethan A Merritt  <merritt@u.washington.edu>

	* src/specfun.c (f_airy):  The implementation of the Airy function 
	used in 4.6 has poor precision (up to 2% relative error).  Replace it
	with code from the Cephes library, the source of other routines
	already in specfun.c.

	*  configure.in docs/gnuplot.doc src/Makefile.am src/eval.c
	src/libcerf.c src/libcerf.h src/specfun.c src/specfun.h:

	The MIT-licensed libcerf library provides a set of special functions
	related to the complex error function cerf(z).  If it is found during
	./configure, we compile user-callable wrappers for the routines
	Complex error function
		   cerf(z) = 2/sqrt(pi) * int[0,z] exp(-t^2) dt
	Complex Dawson's Integral
		   cdawson(z) = exp(-z^2) int[0,z] exp(t^2) dt
		              = sqrt(pi)/2 * exp(-z^2) * erfi(z)
	Imaginary error function (real valued)
		   erfi(x) = -i * erf(i * x)
	Faddeeva rescaled complex error function (Abramowitz & Stegun 7.1.3)
		   faddeeva(z) = w(z) = exp(-z^2) * erfc(-i*z)
	Voigt Profile 
		   VP(x, sigma, gamma) = integral G(t;sigma) L(x-t;gamma) dt
		corresponding to convolution of
		Gaussian 