@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: misc.c,v 1.155 2013/06/28 23:01:30 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: misc.c,v 1.156 2013/07/22 20:20:47 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - misc.c */
@@ -286,14 +286,11 @@ load_file(FILE *fp, char *name, TBOOLEAN can_do_args)
 			 * This code is redundant with part of do_line(),
 			 * but do_line() assumes continuation lines come from stdin.
 			 */
-#ifdef GP_MACROS
+
 			/* macros in a clause are problematic, as they are */
 			/* only expanded once even if the clause is replayed */
-			if (expand_macros)
-			if (string_expand_macros() && string_expand_macros()
-			&&  string_expand_macros() && string_expand_macros())
-			    int_error(NO_CARET, "Too many levels of nested macros");
-#endif
+			string_expand_macros();
+
 			/* Strip off trailing comment and count curly braces */
 			num_tokens = scanner(&gp_input_line, &gp_input_line_len);
 			if (gp_input_line[token[num_tokens].start_index] == '#') {
